# TIC_TAK_TOE_PROJECT

./: .gitignore  .gitmodules  Authentication.cpp  Authentication.h  Authentication_DUT.cpp  Authentication_test.cpp  Board.cpp  Board.h  CMakeLists.txt  CTestTestfile.cmake  README.md  SessionManagement.cpp  SessionManagement.h  SessionManager_DUT.cpp  Session_Management_DUT_.cpp  VerificationMail.HTML  auth_tests[1]_include.cmake  auth_tests[1]_tests.cmake  clang-format.yaml  clang-format.yml  game.cpp  game.h  gamehistorymanager.h  gamemanager.cpp  gamemanager.h  integration_test_cpp.cpp  main.cpp  playermanager.cpp  playermanager.h  test_session_manager.cpp
.github/.workflows/: Auth.yml
.github/workflows/: Auth.yml  CICD_SM.yml  ForLastDance.yml  Game_CI.yml  New_CI.yml  Superlinter.yml  build.yml  ci.yml  superlinter.yml  testcicd.yml
AI/: AI_Opponent.cpp  AI_Opponent.h
AI_and_2Player/tictactoe/: AIAdapter.h  Authentication.cpp  CMakeLists.txt  ai_opponent.cpp  ai_opponent.h  gamelogic.cpp  historymanager.cpp  historymanager.h  main.cpp  mainwindow.cpp  mainwindow.h
AI_and_2Player/tictactoe/tests/: test_ai_opponent.cpp  test_board.cpp  test_gamelogic.cpp
Auth/: test.cpp
Authentication & session management/: Authentication.cpp  Authentication.h  Authentication_DUT.cpp  SessionManager_DUT.cpp  VerificationMail.HTML  signin.cpp
Authentication & session management/.github/workflows/: SuperLinter.yml
GUI/: HOME#1.ui  TestGui.cpp  home.ui  login#1.ui  login#2.ui  login.ui
Game_logic/: Board.cpp  Board.h  gamelogic.cpp  gamelogic.h  historymanager.cpp  mainwindow.cpp  mainwindow.h
Game_logic/Game__Logic/: CMakeLists.txt  historymanager.h
Game_logic/Tests/: test_gamelogic.cpp
Game_logic/tictactoe/: CMakeLists.txt  gamelogic.cpp  historymanager.cpp  main.cpp  mainwindow.cpp  mainwindow.h
Game_logic/tictactoe/Tests/: test_gamelogic.cpp
final/: Authentication.cpp  Authentication.h  Board.cpp  Board.h  Game.h  SessionManagement.cpp  SessionManagement.h  ai_opponent.cpp  ai_opponent.h  codeverification.cpp  codeverification.h  codeverification.ui  game.cpp  game.h  gamelogic.cpp  gamelogic.h  gamemanager.cpp  gamemanager.h  globa.h  globals.cpp  globals.h  historymanager.cpp  historymanager.h  home.cpp  home.h  home.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  payload.json  playboard.cpp  playboard.h  playboard.ui  playermanager.cpp  playermanager.h  replayboard.cpp  replayboard.h  (+7 more)
final/tests/: test_board.cpp
workflows/: ci.yml
